<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFon"
    tools:context=".Activity.NewNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/frame_note"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="5dp"
            android:textSize="@dimen/pin_text_size"
            android:inputType="textCapSentences"
            android:hint="@string/tNoteTitle" />

        <EditText
            android:id="@+id/edit_text_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@color/colorFonLight"
            android:padding="5dp"
            android:textSize="@dimen/pin_text_size_out"
            android:gravity="start|top"
            android:hint="@string/textNote"
            android:inputType="textMultiLine|textCapSentences"
            android:minHeight="200dp" />

        <CheckBox
            android:id="@+id/check_box_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tDeadline" />

        <LinearLayout
            android:id="@+id/field_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_deadline_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/btn_calendar_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/pin_text_size"
                android:onClick="dateDeadlineClick"
                android:background="@color/colorFon"
                android:layout_weight="1"
                android:layout_alignBottom="@+id/text_deadline_date"
                app:srcCompat="@drawable/im_calendar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>